--- a/src/index.html
+++ b/src/index.html
@@ -69,16 +69,16 @@
                 <i class="fa-solid fa-xmark"></i>
             </div>
             <ul class="nav">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#contact">Contact</a></li>
 
-            <div class="download border-none rounded-full p-2 px-4 font-bold hover:bg-blue-800 text-black cursor-pointer"
-                id="download">
-                <a href="../Simon's Cover letter.pdf" download="../Simon's Cover letter.pdf"><i
-                        class="fa-solid fa-download text-white font-bold"></i></a>
-            </div>
+                <div class="download border-none rounded-full p-2 px-4 font-bold hover:bg-blue-800 text-black cursor-pointer"
+                    id="download">
+                    <a href="../Simon's Cover letter.pdf" download="../Simon's Cover letter.pdf"><i
+                            class="fa-solid fa-download text-white font-bold"></i></a>
+                </div>
             </ul>
         </div>
 
@@ -152,7 +152,7 @@
                 <div class="w-full md:w-1/2 flex items-center justify-center">
                     <div class="prose prose-lg text-white text-left  leading-[2.03rem] text-lg max-w-lg font-Rubik">
                         <p>
-                            <span class="text-orange-600">Console.</span><span class="text-orange-400">log</span>(<span
+                            <span class="text-green-700 font-semibold">Console.</span><span class="text-orange-400">log</span>(<span
                                 class="text-orange-600">"</span>Hello World, I'm Olúwanífẹ́mi — a Web Developer. <br>
                             I love the art of creation — transforming ideas into reality through code,
 
@@ -180,7 +180,7 @@
             <Center class="text-white text-2xl font-bold mb-6">
                 <p>MY TECH STACK</p>
             </Center>
-            <div class="scroller" data-speed="fast">
+            <div class="scroller" data-speed="slow">
                 <ul class="tag-list scroller__inner font-semibold text-lg">
                     <li>HTML</li>
                     <li>CSS</li>
@@ -192,7 +192,7 @@
                 </ul>
             </div>
 
-            <div class="scroller" data-direction="right" data-speed="fast">
+            <div class="scroller" data-direction="right" data-speed="slow">
                 <div class="scroller__inner">
                     <ul class="tag-list scroller__inner">
                         <li><img width="100" height="100"
@@ -222,7 +222,8 @@
             </div>
         </section>
     </div>
-    <img src="../img/projects/" alt="">
+    <img src="../img/icons/Html/icons8-html5-50.png" alt="">
+    <img src="../img/icons/Tailwind/icons8-tailwind-css-48.svg" alt="">
     <!-------PROJECTS SECTION------->
     <section>
         <div class="projects">
@@ -241,7 +242,10 @@
         </div>
     </section>
 
-    
+    <!-- Experience setion  -->
+     <section class="experience">
+
+     </section>
     <script src="script.js"></script>
 </body>
 
