complete portfolio. -iteration 02

--- a/index.html
+++ b/index.html
@@ -396,17 +396,17 @@
                     Fill out the form or reach out via email. I’ll get back to you as soon as possible!
                 </p>
                 <div class="flex gap-4 mt-6">
-                    <a href="mailto:your@email.com"
+                    <a href="mailto:nifemibello10@gmail.com"
                         class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
                         aria-label="Email">
                         <i class="fa-solid fa-envelope"></i>
                     </a>
-                    <a href="mailto:your@email.com"
+                    <a href="https://wa.me/+2347048742443" target="_blank"
                         class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
-                        aria-label="Email">
-                        <i class="fa-solid fa-envelope"></i>
+                        aria-label="whatsapp">
+                        <i class="fa-brands fa-whatsapp"></i>
                     </a>
-                    <a href="https://linkedin.com/in/yourusername" target="_blank"
+                    <a href="https://www.linkedin.com/in/nifemi-bello/" target="_blank"
                         class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
                         aria-label="LinkedIn">
                         <i class="fa-brands fa-linkedin"></i>
