--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <!-------NAVBAR------->
         <nav class="stroke bg-[#081213] p-4 px-10 flex gap-10 justify-between items-center">
-            <p class=" text-white font-bold text-2xl logo font-[Montserrat]"> Olúwanífẹ́mi </p>
+            <p class=" text-white font-bold text-2xl logo font-[Montserrat] hover:text-yellow-400"> Olúwanífẹ́mi </p>
             <ul class=" nav hidden gap-11 text-white justify-evenly  items-center text-lg md:flex">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -83,7 +83,8 @@
         </div>
 
         <!-------HERO SECTION------->
-        <section class=" flex flex-col-reverse md:flex-row items-center justify-between px-4 " data-aos="fade-right" data-aos-duration="840" id="home">
+        <section class=" flex flex-col-reverse md:flex-row items-center justify-between px-4 " data-aos="fade-right"
+            data-aos-duration="840" id="home">
             <div class="left mx-16 my-8 md:my-36 ">
                 <div class="left-content">
                     <h1 class="text-4xl font-bold text-white">Hey 👋🏽, I'm <span
@@ -151,7 +152,8 @@
                 </div>
 
                 <!-- TEXT BLURB (50% width, centered) -->
-                <div class="w-full md:w-1/2 flex items-center justify-center" data-aos="fade-up" data-aos-duration="600">
+                <div class="w-full md:w-1/2 flex items-center justify-center" data-aos="fade-up"
+                    data-aos-duration="600">
                     <div class="prose prose-lg text-white text-left  leading-[2.03rem] text-lg max-w-lg font-Rubik">
                         <p>
                             <span class="text-blue-400 font-semibold">Console.</span><span
@@ -229,15 +231,31 @@
                 </div>
             </div>
         </section>
-    </div> 
+    </div>
     <!-------PROJECTS SECTION------->
     <section>
-        <div class="projects" id="projects">    
+        <div class="projects" id="projects">
             <div class="project1">
                 <header class="text-center py-8">
                     <h1 class="text-3xl font-bold">My Projects</h1>
                 </header>
-
+                <div class="flex flex-wrap gap-3 justify-center mb-8" id="projectFilters">
+                    <button
+                        class="filter-btn px-5 py-2 rounded-full font-bold transition-all duration-200 border-2 border-blue-700 bg-[#101a23] text-blue-300 hover:bg-yellow-400 hover:text-black hover:border-yellow-400 focus:outline-none"
+                        data-tech="All" data-active="true">All</button>
+                    <button
+                        class="filter-btn px-5 py-2 rounded-full font-bold transition-all duration-200 border-2 border-blue-700 bg-[#101a23] text-blue-300 hover:bg-yellow-400 hover:text-black hover:border-yellow-400 focus:outline-none"
+                        data-tech="HTML">HTML</button>
+                    <button
+                        class="filter-btn px-5 py-2 rounded-full font-bold transition-all duration-200 border-2 border-blue-700 bg-[#101a23] text-blue-300 hover:bg-yellow-400 hover:text-black hover:border-yellow-400 focus:outline-none"
+                        data-tech="CSS">CSS</button>
+                    <button
+                        class="filter-btn px-5 py-2 rounded-full font-bold transition-all duration-200 border-2 border-blue-700 bg-[#101a23] text-blue-300 hover:bg-yellow-400 hover:text-black hover:border-yellow-400 focus:outline-none"
+                        data-tech="Tailwind">Tailwind</button>
+                    <button
+                        class="filter-btn px-5 py-2 rounded-full font-bold transition-all duration-200 border-2 border-blue-700 bg-[#101a23] text-blue-300 hover:bg-yellow-400 hover:text-black hover:border-yellow-400 focus:outline-none"
+                        data-tech="JS">JavaScript</button>
+                </div>
                 <!-- Grid Container -->
                 <main class="max-w-6xl mx-auto px-4">
                     <div id="projectsGrid" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
@@ -431,7 +449,8 @@
                         <label for="message" class="block text-sm font-semibold text-gray-200 mb-1">Message</label>
                         <textarea
                             class="w-full p-3 rounded-lg bg-[#192734] border border-blue-800 text-white placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-yellow-400 transition resize-none"
-                            id="message" rows="5" name="message" placeholder="Type your message here..." required></textarea>
+                            id="message" rows="5" name="message" placeholder="Type your message here..."
+                            required></textarea>
                     </div>
                     <button
                         class="mt-2 bg-gradient-to-r from-yellow-400 to-yellow-300 text-black font-bold py-3 rounded-lg shadow hover:from-yellow-300 hover:to-yellow-400 transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-yellow-400"
