Enhance portfolio with contact form integration, success modal, and skills section
--NOT My regular design pattern  ARRGH

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
         <!-------NAVBAR------->
         <nav class="stroke bg-[#081213] p-4 px-10 flex gap-10 justify-between items-center">
-            <p class=" text-white font-bold text-2xl logo font-[Montserrat] hover:text-yellow-400"> Olúwanífẹ́mi </p>
+            <p class=" text-white font-bold text-2xl logo font-[Montserrat] hover:text-yellow-400 duration-300 ease-in">
+                Olúwanífẹ́mi </p>
             <ul class=" nav hidden gap-11 text-white justify-evenly  items-center text-lg md:flex">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -94,6 +95,14 @@
                     <h1 aria-label="Hi! I'm a developer" class="text-4xl font-bold text-white mt-4  ">
                         a&nbsp;<span class="typewriter border-md rounded-md px-2 bg-blue-900"></span>
                     </h1>
+                </div>
+                <div class="mt-10 flex gap-4 items-center">
+                    <div
+                        class="contact Inline-flex items-center bg-white text-black hover:bg-black hover:text-white font-bold py-3 px-8 rounded-full shadow-xl transition-all duration-300 focus:outline-none focus:ring-2 focus:ring-yellow-400 text-lg font-Montserrat group">
+                        <a href="#contact"><span class="mr-3 tracking-wide">Let's Connect</span> <i
+                                class="fa-solid fa-paper-plane group-hover:translate-x-1 group-hover:-translate-y-1 transition-transform duration-200"></i>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -232,6 +241,85 @@
             </div>
         </section>
     </div>
+    <section class="skills-section max-w-4xl mx-auto my-16 px-4">
+        <h2 class="text-2xl font-bold text-white mb-6 text-center font-Montserrat">Skills</h2>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-12 text-lg">
+            <!-- Frontend -->
+            <div>
+                <h3 class="text-lg font-semibold text-blue-300 mb-5">Frontend</h3>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/material-outlined/48/html-5.png" class="w-6 h-6"
+                        alt="HTML" />
+                    <span class="text-white font-medium flex-1">HTML5</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 95%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios/100/css3.png" class="w-6 h-6" alt="CSS" />
+                    <span class="text-white font-medium flex-1">CSS3</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 90%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios-filled/100/javascript.png" class="w-6 h-6" alt="JS" />
+                    <span class="text-white font-medium flex-1">JavaScript</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 85%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/material-outlined/96/tailwind_css.png" class="w-6 h-6"
+                        alt="Tailwind" />
+                    <span class="text-white font-medium flex-1">Tailwind</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5 ">
+                    <img src="https://img.icons8.com/ffffff/ios/100/react-native.png" class="w-6 h-6" alt="React" />
+                    <span class="text-white font-medium flex-1">React</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 70%"></div>
+                    </div>
+                </div>
+            </div>
+            <!-- Tools & Others -->
+            <div>
+                <h3 class="text-lg font-semibold text-blue-300 mb-5">Tools & Others</h3>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios/100/git.png" class="w-6 h-6" alt="Git" />
+                    <span class="text-white font-medium flex-1">Git</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 80%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios/100/figma--v1.png" class="w-6 h-6" alt="Figma" />
+                    <span class="text-white font-medium flex-1">Figma</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 75%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios-filled/100/mysql-logo.png" class="w-6 h-6"
+                        alt="MySQL" />
+                    <span class="text-white font-medium flex-1">MySQL</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 60%"></div>
+                    </div>
+                </div>
+                <div class="flex items-center gap-3 mb-5">
+                    <img src="https://img.icons8.com/ffffff/ios-filled/100/jquery.png" class="w-6 h-6" alt="jQuery" />
+                    <span class="text-white font-medium flex-1">jQuery</span>
+                    <div class="w-2/3 bg-blue-900 rounded-full h-2">
+                        <div class="bg-yellow-400 h-2 rounded-full" style="width: 60%"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-------PROJECTS SECTION------->
     <section>
         <div class="projects" id="projects">
@@ -403,6 +491,16 @@
     </section>
 
     <!-- CONTACT SECTION -->
+         <div id="successModal"
+        class="fixed inset-0 z-[9999] flex items-center justify-center bg-black bg-opacity-60 hidden">
+        <div class="bg-white rounded-2xl shadow-2xl px-8 py-6 flex flex-col items-center animate-fadeInUp">
+            <i class="fa-solid fa-circle-check text-4xl text-green-500 mb-2"></i>
+            <h3 class="text-xl font-bold text-blue-900 mb-2">Message Sent!</h3>
+            <p class="text-gray-700 mb-4 text-center">Thank you for reaching out. I’ll get back to you soon.</p>
+            <button id="closeModalBtn"
+                class="mt-2 px-6 py-2 bg-blue-700 text-white rounded-full font-semibold hover:bg-yellow-400 hover:text-black transition">Close</button>
+        </div>
+    </div>
     <footer class="bg-black text-white py-8 px-4 font-regular" id="contact">
         <div class="flex flex-col md:flex-row justify-evenly items-center gap-10 py-4 px-10 mx-auto">
             <div class="w-full md:w-1/2 mb-8 md:mb-0">
@@ -412,15 +510,15 @@
                     Fill out the form or reach out via email. I’ll get back to you as soon as possible!
                 </p>
                 <div class="flex gap-4 mt-6">
-                    <a href="mailto:nifemibello10@gmail.com"
-                        class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
-                        aria-label="Email">
-                        <i class="fa-solid fa-envelope"></i>
-                    </a>
                     <a href="https://wa.me/+2347048742443" target="_blank"
                         class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
                         aria-label="whatsapp">
                         <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="https://github.com/UFOASTRO" target="_blank"
+                        class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
+                        aria-label="github">
+                        <i class="fa-brands fa-github"></i>
                     </a>
                     <a href="https://www.linkedin.com/in/nifemi-bello/" target="_blank"
                         class="text-blue-400 hover:text-yellow-400 transition-colors duration-200 text-2xl"
@@ -461,6 +559,8 @@
             </div>
         </div>
     </footer>
+        <!-- Success Modal -->
+
 
     <section class="py-8 bg-[#0a192f] rounded-lg shadow-lg min-w-[90%] mx-auto flex justify-evenly gap-4">
         <div class="date" id="date">
@@ -477,10 +577,17 @@
             <span class="text-base md:text-xl lg:text-lg">&copy; BELLO OLUWANIFEMI-2025</span>
         </center>
     </section>
+    <button id="backToTop"
+        class="fixed bottom-8 right-8 z-50 bg-blue-700 text-white p-3 rounded-full shadow-lg hover:bg-yellow-400 hover:text-black transition-all duration-200 focus:outline-none focus:ring-2 focus:ring-yellow-400"
+        aria-label="Back to top" style="display:none;">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
     <script src="script.js"></script>
     <script>
         AOS.init();
     </script>
+
+
 </body>
 
 </html>
