--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                         <p>
                             <span class="text-blue-400 font-semibold">Console.</span><span
                                 class="text-[#FBD120]">log</span>(<span class="text-orange-600">"</span>Hello World,
-                            I'm Olúwanífẹ́mi — a Computer Science student at Bells Univeristy Of Technology, and a
+                            I'm Olúwanífẹ́mi — a 100 Level Computer Science student at Bells Univeristy Of Technology, and a
                             passionate
                             Web Developer
                             driven by creativity and curiosity.
