add updated resume

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <div class="download  border-none rounded-full  p-2 px-4  font-bold hover:bg-blue-800 text-black cursor-pointer "
                     id="download">
-                    <a href="../Simon's Cover letter.pdf" download="../Simon's Cover letter.pdf"><i
+                    <a href="Bello-Oluwanifemi-Resume.pdf" download="Bello-Oluwanifemi-Resume.pdf"><i
                             class="fa-solid fa-download text-white font-bold"></i></a>
                 </div>
             </ul>
