--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
 
         <!-------NAVBAR------->
-        <nav class="stroke bg-[#081213] p-4 px-10 flex gap-10 justify-between items-center">
+        <nav class="stroke bg-[#081213] p-4 px-10 flex gap-10 justify-between items-center w-full">
             <p class=" text-white font-bold text-2xl logo font-[Montserrat] hover:text-yellow-400 duration-300 ease-in">
                 Olúwanífẹ́mi </p>
             <ul class=" nav hidden gap-11 text-white justify-evenly  items-center text-lg md:flex">
@@ -167,7 +167,8 @@
                         <p>
                             <span class="text-blue-400 font-semibold">Console.</span><span
                                 class="text-[#FBD120]">log</span>(<span class="text-orange-600">"</span>Hello World,
-                            I'm Olúwanífẹ́mi — a 100 Level Computer Science student at Bells Univeristy Of Technology, and a
+                            I'm Olúwanífẹ́mi — a 100 Level Computer Science student at Bells Univeristy Of Technology,
+                            and a
                             passionate
                             Web Developer
                             driven by creativity and curiosity.
@@ -491,7 +492,7 @@
     </section>
 
     <!-- CONTACT SECTION -->
-         <div id="successModal"
+    <div id="successModal"
         class="fixed inset-0 z-[9999] flex items-center justify-center bg-black bg-opacity-60 hidden">
         <div class="bg-white rounded-2xl shadow-2xl px-8 py-6 flex flex-col items-center animate-fadeInUp">
             <i class="fa-solid fa-circle-check text-4xl text-green-500 mb-2"></i>
@@ -559,7 +560,7 @@
             </div>
         </div>
     </footer>
-        <!-- Success Modal -->
+    <!-- Success Modal -->
 
 
     <section class="py-8 bg-[#0a192f] rounded-lg shadow-lg min-w-[90%] mx-auto flex justify-evenly gap-4">
